@@ -4,6 +4,8 @@ case it might be helpful.
 
 PRE Release Checks for 2.2
 
+* 	Fix RenderXHTML
+*	Editors with no scope may edit "ANYTHING" rather than "NOTHING"
 
 *	Check ArchiveConfig.pm is sane and normal. Double check diff from
           2.1.1. Clean up default views config.
